Added basic ls command Implemented the start of ls command functionality. As of this commit, ls only prints the current directory properly. All that needs to be added is a helper function to return each directory one by one to find a match, and return that cluster.

--- a/src/makefile
+++ b/src/makefile
@@ -1,8 +1,8 @@
 C=gcc -g
 L=gcc -g -c
 
-../proj3.x : main.o BPB.o
-	$C main.o BPB.o -o ../proj3.x
+../proj3.x : main.o BPB.o ls.o
+	$C main.o BPB.o ls.o -o ../proj3.x
 	chmod -R 700 ..
 
 main.o : main.c main.h
@@ -11,9 +11,11 @@ main.o : main.c main.h
 BPB.o : BPB.c BPB.h
 	$L BPB.c
 
+ls.o : ls.c ls.h
+	$L ls.c
+
 run :
-	../proj3.x ../fat32.img > proj3.o
-	chmod -R 700 ..
+	../proj3.x ../fat32.img
 
 clean :
 	rm -f ../proj3.x
