--- a/src/makefile
+++ b/src/makefile
@@ -1,8 +1,8 @@
 C=gcc -g
 L=gcc -g -c
 
-../proj3.x : main.o BPB.o ls.o
-	$C main.o BPB.o ls.o -o ../proj3.x
+../proj3.x : main.o BPB.o ls.o size.o
+	$C main.o BPB.o ls.o size.o -o ../proj3.x
 	chmod -R 700 ..
 
 main.o : main.c main.h
@@ -10,6 +10,9 @@ main.o : main.c main.h
 
 BPB.o : BPB.c BPB.h
 	$L BPB.c
+
+size.o : size.c size.h
+	$L size.c
 
 ls.o : ls.c ls.h
 	$L ls.c
