Added creat functionality
creat.c & creat.h
	-Added functionality for creat along side some other
	 functions like:
		-Finding next availible cluster
		-Adding direntry given offset
	-Also code for finding FAT start and end can be copied
	 from file.

makefile, main.c, & main.h
	-Added necessary components for creat

BPB.c
	-Added get functions for FAT size

ls.h
	-Removed some leading tabs for style

cd.c
	-Fixed logic where sometimes wrong error is printed

--- a/src/makefile
+++ b/src/makefile
@@ -1,12 +1,15 @@
 C=gcc -g
 L=gcc -g -c
 
-../proj3.x : main.o BPB.o ls.o size.o cd.o
-	$C main.o BPB.o cd.o ls.o size.o -o ../proj3.x
+../proj3.x : main.o BPB.o ls.o size.o cd.o creat.o
+	$C main.o BPB.o creat.o cd.o ls.o size.o -o ../proj3.x
 	chmod -R 700 ..
 
 main.o : main.c main.h
 	$L main.c
+
+creat.o : creat.c creat.h
+	$L creat.c
 
 cd.o : cd.c cd.h
 	$L cd.c
