Finished mkdir and creat
creat.c & creat.h
	-Added mkdir
	-Fixed issue where addDirEnt was writing incorrect FirsClus

main.c makefile
	-Added infrastructure for mkdir
	-Added reset rule to reset image back to original

README.md
	-Updated division of labor to reflect pogress

--- a/src/makefile
+++ b/src/makefile
@@ -23,6 +23,10 @@ size.o : size.c size.h
 ls.o : ls.c ls.h
 	$L ls.c
 
+reset :
+	tar -xf ../fat32.img.tar.gz
+	mv fat32.img ..
+
 run :
 	../proj3.x ../fat32.img
 
