--- a/src/makefile
+++ b/src/makefile
@@ -1,8 +1,8 @@
 C=gcc -g
 L=gcc -g -c
 
-../proj3.x : main.o BPB.o ls.o size.o cd.o creat.o
-	$C main.o BPB.o creat.o cd.o ls.o size.o -o ../proj3.x
+../proj3.x : main.o BPB.o ls.o size.o cd.o creat.o mv.o cp.o rm.o
+	$C main.o BPB.o creat.o cd.o ls.o size.o mv.o cp.o rm.o -o ../proj3.x
 	chmod -R 700 ..
 
 main.o : main.c main.h
@@ -13,6 +13,15 @@ creat.o : creat.c creat.h
 
 cd.o : cd.c cd.h
 	$L cd.c
+
+mv.o : mv.c mv.h
+	$L mv.c
+
+cp.o : cp.c cp.h
+	$L cp.c
+
+rm.o : rm.c rm.h
+	$L rm.c
 
 BPB.o : BPB.c BPB.h
 	$L BPB.c
